- Add canvas - Add rgb alias to tuple

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(
   ray-tracer-tests
   tests/tuple_test.cpp
   tests/color_test.cpp
+  tests/canvas_test.cpp
 )
 
 target_link_libraries(
