Add matrix class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(
   tests/tuple_test.cpp
   tests/color_test.cpp
   tests/canvas_test.cpp
+  tests/mat_test.cpp
 )
 
 target_link_libraries(
