--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,9 +28,9 @@ enable_testing()
 
 add_executable(
   ray-tracer-tests
-  # tests/tuple_test.cpp
-  # tests/color_test.cpp
-  # tests/canvas_test.cpp
+  tests/tuple_test.cpp
+  tests/color_test.cpp
+  tests/canvas_test.cpp
   tests/mat_test.cpp
 )
 
